==============
Change History
==============

Unreleased
==========

Unreleased
==========

 - included memcached in buildout

 - use openresty instead of nginx

 - nailed versions of dependencies

2013/06/19 0.5.0
================

 - Add MongoLayer

2013/04/03 0.4.3
================

 - SMTPServerLayer's is now None before calling setUp()

 - add additional tests for SMTPServerLayer

2013/04/03 0.4.2
================

 - add missing __name__ to SMTPServerLayer

2013/04/03 0.4.1
================

 - add missing __bases__ to SMTPServerLayer

2013/04/03 0.4.0
================

 - added SMTPServerLayer

 - updated bootstrap.py and nginx/psql download location

2012/11/23 0.3.5
================

 - ServerLayer: add args for subprocess open

2012/11/12 0.3.4
================

 - set to zip_safe = False

2012/11/12 0.3.3
================

 - release without changes due to wrong distribution of previous version

2011/12/06 0.3.2
================

 - fixed #1 an endless loop in server layer

2011/11/29 0.3.1
================

 - added missing README to distro

2011/11/29 0.3.0
================

 - allow to set a snapshot directory in workdirectory-layer - this
   allows for generating non-temporary snapshots.

 - moved wait implementation for server start in server-layer into
   start, this is usefull when calling start and stop in tests, but
   might introduce incompatibilities when subclassed.

 - moved to github

 - postgresql 8.4 compat

2011/05/18 0.2.3
================

 - also dump routines for mysql

2011/05/11 0.2.2
================

 - try to run commands from the scripts dir (mysql 5.5)

2011/05/10 0.2.1
================

 - fixed the mysqld_path to work with newer mysql version

2011/01/07 0.2.0
================

 - fixed an UnboundLocalError in server layer

 - do not use shell option in server layer command and sanitize the
   command options.

 - reduced start/stop wait times in mysql layer

 - use modification times in layer sql script change checking